<resources>
    <string name="app_name">TrainTracker</string>
    <string name="element_text">test</string>
    <string name="refresh_button">Refresh</string>
    <string name="preference_file_key">preferences</string>
    <string name="LineStatusButton">Line Statuses</string>
    <string name="back">Back</string>
    <string name="station_arrivals">Station Arrivals</string>
    <string name="retry">Retry</string>
    <string name="data_could_not_be_found">Data could not be found</string>
    <string name="settings">Settings</string>
    <string name="london_underground_logo">London Underground Logo</string>
    <string name="arrivals">Arrivals</string>
    <string name="could_not_load_data">Could not load data</string>
    <string name="settings_spinner">Select refresh time for notifications</string>
    <string name="service_notifications">Select the frequency of service notifications:</string>
    <string name="arrivals_button_text">ARRIVALS</string>
    <string name="maps_button_label">Map</string>
    <string name="arrivals_button_label">Arrivals</string>


    <string-array name="refresh_delays">
        <item>Off</item>
        <item>5 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
    </string-array>
</resources>